@@ -694,5 +694,6 @@ extern void unroll_and_peel_loops (int);
 extern void doloop_optimize_loops (void);
 extern void move_loop_invariants (void);
 extern bool finite_loop_p (struct loop *);
+extern VEC (basic_block, heap) * get_loop_hot_path (const struct loop *loop);
 
 #endif /* GCC_CFGLOOP_H */
